--- a/.github/workflows/next-release-minor.yml
+++ b/.github/workflows/next-release-minor.yml
@@ -109,27 +109,100 @@ jobs:
           echo "::set-output name=milestone-number::${{ env.MILESTONE_NUMBER }}"
 
 
-
-
-
-  make-next-version-init-pr:
+  make-next-version-inital-pr:
     needs: get-environment-variables
-    uses: ./.github/workflows/next-release-init-pr.yml
-    with:
-      release-version: ${{ needs.get-environment-variables.outputs.release-version }}
-      new-release-version: ${{ needs.get-environment-variables.outputs.new-release-version }}
-      minor-version: ${{ needs.get-environment-variables.outputs.minor-version }}
-      milestone-number: ${{ needs.get-environment-variables.outputs.milestone-number }}
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
+    env:
+      RELEASE_VERSION: ${{ needs.get-environment-variables.outputs.release-version }}
+      NEW_RELEASE_VERSION: ${{ needs.get-environment-variables.outputs.new-release-version }}
+      MINOR_VERSION: ${{ needs.get-environment-variables.outputs.minor-version }}
+      MILESTONE_NUMBER: ${{ needs.get-environment-variables.outputs.milestone-number }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ env.GITHUB_TOKEN }}
+          ref: master
+
+      - name: "Make initial changes for ${{ env.NEW_RELEASE_VERSION }}"
+        run: |
+          echo "Update version.py"
+          sed -i "s/_version_micro = '*[0-9]*'*/_version_micro = ''/g" saltproc/version.py
+          sed -i "s/_version_minor = [0-9]*/_version_minor = ${{ env.MINOR_VERSION }}/g" saltproc/version.py
+          sed -i "s/^# _version_extra = 'dev'/_version_extra = 'dev'/g" saltproc/version.py
+          sed -i "s/^_version_extra = '0'/# _version_extra = '0'/g" saltproc/version.py
+          echo "Create new release notes"
+          cp doc/releasenotes/template.rst doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+          sed -i "s/vx.x.x/${{ env.NEW_RELEASE_VERSION }}/g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+          sed -i "s/${{ env.RELEASE_VERSION }}/${{ env.NEW_RELEASE_VERSION }}\n  ${{ env.RELEASE_VERSION }}/g" doc/releasenotes/index.rst
+
+      - name: "Create PR containing inital changes for ${{ env.NEW_RELEASE_VERSION }}" 
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ env.GITHUB_TOKEN }}
+          base: master
+          add-paths: |
+            saltproc/version.py
+            doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+            doc/releasenotes/index.rst
+
+          branch: "${{ env.NEW_RELEASE_VERSION }}-init"
+          delete-branch: true
+          commit-message: "inital changes for ${{ env.NEW_RELEASE_VERSION }}"
+          title: "[INIT] Update `version.py` and create release notes for version ${{ env.NEW_RELEASE_VERSION }}"
+          body: "This is an automated PR that updates the version number and creates the release notes file for version ${{ env.NEW_RELEASE_VERSION }}. This should be the first PR merged during development of version ${{ env.NEW_RELEASE_VERSION }}"
+          reviewers: yardasol
+          milestone: ${{ env.MILESTONE_NUMBER }}
+          labels: |
+            Priority:1-Critical
+            Status:5-In Review
+            Type:Style
+            Type:Docs
+            Difficulty:1-Beginner
+            Comp:Build
 
   make-next-version-final-pr:
     needs: [get-environment-variables, make-next-version-init-pr]
-    uses: ./.github/workflows/next-release-final-pr.yml
-    with:
-      release-version: ${{ needs.get-environment-variables.outputs.release-version }}
-      new-release-version: ${{ needs.get-environment-variables.outputs.new-release-version }}
-      minor-version: ${{ needs.get-environment-variables.outputs.minor-version }}
-      milestone-number: ${{ needs.get-environment-variables.outputs.milestone-number }}
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
+      NEW_RELEASE_VERSION: ${{ needs.get-environment-variables.outputs.new-release-version }}
+      MILESTONE_NUMBER: ${{ needs.get-environment-variables.outputs.milestone-number }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ env.GITHUB_TOKEN }}
+          ref: master
+          
+      - name: Get changes from the INIT PR
+        run: |
+            git pull origin ${{ env.NEW_RELEASE_VERSION }}-init
+
+      - name: "Make changes necessary for publishing ${{ env.NEW_RELEASE_VERSION }} in advance"
+        run: |
+          echo "Prepare for full release"
+          sed -i "s/\.\. note:: These release notes are currently in production\.//g" doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+          sed -i "s/^_version_extra = 'dev'/# _version_extra = 'dev'/g" saltproc/version.py
+          sed -i "s/# _version_extra = '0'/_version_extra = '0'/g" saltproc/version.py
+
+      - name: "Create PR containing changes necessary for publishing ${{ env.NEW_RELEASE_VERSION }}"
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ env.GITHUB_TOKEN }}
+          base: master
+          add-paths: |
+            saltproc/version.py
+            doc/releasenotes/${{ env.NEW_RELEASE_VERSION }}.rst
+            doc/releasenotes/index.rst
+
+          branch: "${{ env.NEW_RELEASE_VERSION }}-final"
+          delete-branch: true
+          commit-message: "final changes before publishing ${{ env.NEW_RELEASE_VERSION }}"
+          title: "[REQUIRED FOR PUBLISHING] Finishing touches for version ${{ env.NEW_RELEASE_VERSION }}"
+          body: "This is an automated PR that updates the version number and release notes in preparation for the full release of version ${{ env.NEW_RELEASE_VERSION }}. This should be last PR merged before publishing version ${{ env.NEW_RELEASE_VERSION }}. Rebasing this PR on top of the most recent commit in `master` is a prequisite of publishing version ${{ env.NEW_RELEASE_VERSION }}. We rebase becasue the commits in this PR were created around the same time development on ${{ env.NEW_RELEASE_VERSION }} began."
+          reviewers: yardasol
+          milestone: ${{ env.MILESTONE_NUMBER }}
+          labels: |
+            Priority:2-Normal
+            Status:1-New
+            Type:Style
+            Type:Docs
+            Difficulty:1-Beginner
+            Comp:Build
