--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -27,7 +27,7 @@ jobs:
       LIBMESH: no
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
 ## TESTING CACHE ##
 # Setup conda 
@@ -51,7 +51,7 @@ jobs:
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
-            /usr/local/bin/openmc
+            ~/build
             ~/endfb71_hdf5
             ~/.cache/pip
           key: depcache-${{ hashFiles('environment.yml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
@@ -76,13 +76,13 @@ jobs:
         with: 
           repository: openmc-dev/openmc
           path: openmc
-
-      - name: Build OpenMC
+          
+      - name: Build OpenMC from scratch
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
         run: |
           cd openmc
-          pip install --upgrade-strategy only-if-needed --no-binary=h5py h5py
           python tools/ci/gha-install.py
+          mv build $HOME/build
           pip install .
           cd ../
 
@@ -99,7 +99,7 @@ jobs:
         shell: bash -l {0}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
 ## DOCUMENTATION CACHE ##
       - name: Set up conda
@@ -141,7 +141,6 @@ jobs:
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
         run: |
           cd openmc
-          pip install --upgrade-strategy only-if-needed --no-binary=h5py h5py
           pip install .
           cd ../
 
